--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@draftcraft/cards",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "Comprehensive React Cards library",
   "author": "draftcraft",
   "license": "MIT",
@@ -24,10 +24,11 @@
     "deploy": "gh-pages -d example/build"
   },
   "peerDependencies": {
-    "react": "^16.0.0"
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   },
   "devDependencies": {
-    "@types/react": "^16.9.27",
+    "@types/react": "^16.13.1",
     "microbundle-crl": "^0.13.8",
     "babel-eslint": "^10.0.3",
     "cross-env": "^7.0.2",
