--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
+    "@storybook/addon-knobs": "^5.3.18",
     "@storybook/preset-create-react-app": "^2.1.1",
     "@storybook/react": "^5.3.18",
     "@types/react": "^16.9.32",
     "babel-eslint": "^10.0.3",
     "cross-env": "^7.0.2",
+    "css-loader": "^3.4.2",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.7.0",
     "eslint-config-standard": "^14.1.0",
@@ -46,13 +48,18 @@
     "eslint-plugin-standard": "^4.0.1",
     "gh-pages": "^2.2.0",
     "microbundle-crl": "^0.13.8",
+    "node-sass": "^4.13.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "^3.4.1"
+    "react-scripts": "^3.4.1",
+    "style-loader": "^1.1.3"
   },
   "files": [
     "dist"
-  ]
+  ],
+  "dependencies": {
+    "react-spring": "^8.0.27"
+  }
 }
