--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "test:unit": "cross-env CI=1 react-scripts test --env=jsdom",
     "test:watch": "react-scripts test --env=jsdom",
     "predeploy": "cd example && yarn install && yarn run build",
-    "deploy": "gh-pages -d example/build"
+    "deploy": "gh-pages -d example/build",
+    "generate": "plop"
   },
   "peerDependencies": {
     "react": "^16.13.1",
@@ -50,6 +51,7 @@
     "microbundle-crl": "^0.13.8",
     "node-sass": "^4.13.1",
     "npm-run-all": "^4.1.5",
+    "plop": "^2.6.0",
     "prettier": "^1.19.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
