--- a/package.json
+++ b/package.json
@@ -64,6 +64,9 @@
     "dist"
   ],
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "clsx": "^1.1.0",
     "react-spring": "^8.0.27",
     "react-swipeable-views": "^0.13.9"
