--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@fortawesome/react-fontawesome": "^0.1.9",
     "clsx": "^1.1.0",
     "react-spring": "^8.0.27",
-    "react-swipeable-views": "^0.13.9"
+    "react-swipeable-views": "^0.13.9",
+    "react-use-gesture": "^7.0.13"
   }
 }
