--- a/package.json
+++ b/package.json
@@ -68,8 +68,8 @@
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
     "clsx": "^1.1.0",
+    "react-draggable": "^4.3.1",
     "react-spring": "^8.0.27",
-    "react-swipeable-views": "^0.13.9",
-    "react-use-gesture": "^7.0.13"
+    "react-swipeable-views": "^0.13.9"
   }
 }
