--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "clsx": "^1.1.0",
     "react-draggable": "^4.3.1",
     "react-spring": "^8.0.27",
+    "react-swipeable": "^5.5.1",
     "react-swipeable-views": "^0.13.9"
   }
 }
